--- a/css/style.css
+++ b/css/style.css
@@ -247,6 +247,136 @@ footer {
   grid-area: pie;
 }
 
+@media screen and (max-width: 1440px) {
+  body {
+    grid-template-areas: "header header" "nav nav" "main main" "pie pie";
+    grid-template-columns: 512px 512px;
+    grid-template-rows: 150px 20px auto 1fr;
+  }
+  body main .ultimoGpdisputado img {
+    width: 100%;
+  }
+  body main .noticias {
+    display: flex;
+    align-items: center;
+    display: block;
+    margin: 0px 37px;
+  }
+  body main .noticias .box {
+    display: inline-flex;
+    background-color: gainsboro;
+    margin: 53px 191px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px gray;
+    overflow: hidden;
+  }
+  body main .noticias .box img {
+    max-width: 100%;
+    object-fit: cover;
+  }
+  body main .boxblog {
+    display: inline-flex;
+    background-color: gainsboro;
+    margin: 50px 50px 10px 233px;
+    border-radius: 5px;
+    overflow: hidden;
+    align-items: center;
+    width: 561px;
+    justify-content: center;
+    padding: 16px;
+  }
+  body main .boxblog img {
+    width: 733px;
+    align-content: center;
+    padding: -105px 5px 5px 5px;
+    margin: 54px -202px 31px -165px;
+    object-fit: contain;
+  }
+  body main .textoDelmain p {
+    display: flex;
+    width: 500px;
+    text-align: justify;
+  }
+  body main .imagenDelmain {
+    display: flex;
+    justify-content: left;
+    width: 0px;
+    height: 552px;
+    margin: -579px 1090px 204px 554px;
+  }
+  body main .imagenDelmain2,
+  body main .imagenDelmain3,
+  body main .imagenDelmain4 {
+    display: none;
+  }
+  body main .imagenDelmain2 {
+    display: flex;
+    justify-content: left;
+    width: 0px;
+    height: 557px;
+    margin: -759px 938px 31px 896px;
+  }
+  body main .boxNewslatter {
+    display: flex;
+    background-color: gainsboro;
+    margin: 40px 134px 10px 260px;
+    border-radius: 5px;
+    overflow: hidden;
+    align-content: center;
+    width: 500px;
+    height: 500px;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  body main .boxNewslatter h2 {
+    text-align: center;
+    margin: -51px -527px 340px -237px;
+  }
+  body main .encabezadosDeseccion h1,
+  body main .tituloDelapagina h1,
+  body main .tituloDelapagina h2,
+  body main .encabezadosDeseccion h2 {
+    display: flex;
+    justify-content: center;
+    margin-top: 150px;
+    margin-bottom: 20px;
+  }
+  body main .encabezadosDeseccion h1 {
+    margin-top: 24px;
+  }
+  body main .box img {
+    display: flex;
+    align-items: center;
+    margin: 28px 114px;
+  }
+  .tituloDelapagina {
+    padding: 30px;
+  }
+  .nav {
+    flex-direction: column;
+    background-color: #07371c;
+  }
+  .ultimoGpdisputado #img {
+    width: 100%;
+    height: 100%;
+  }
+  footer .listaPie1 ul,
+  footer .listaPie2 ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 10px 10px 10px;
+  }
+  footer .listaPie1 ul h2,
+  footer .listaPie2 ul h2 {
+    display: flex;
+    flex-direction: column;
+  }
+  footer .direccion2 {
+    display: flex;
+    margin: -157px 0px 0px 0px;
+  }
+}
 @media screen and (max-width: 1024px) {
   body {
     grid-template-areas: "header header" "nav nav" "main main" "pie pie";
