--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -22,7 +22,174 @@ footer {
 
 
 }
+@media screen and (max-width: 1440px) {
 
+    body {
+        grid-template-areas:
+            "header header"
+            "nav nav"
+            "main main"
+            "pie pie";
+        grid-template-columns: 512px 512px;
+        grid-template-rows: 150px 20px auto 1fr;
+
+        main {
+            
+            .ultimoGpdisputado{
+                img {
+                    width: 100%;
+                   
+                }
+            }
+            .noticias {
+                display: flex;
+                align-items: center;
+                display: block;
+                margin: 0px 37px;
+
+                .box {
+                    display: inline-flex;
+                    background-color: gainsboro;
+                    margin: 53px 191px;
+                    border-radius: 5px;
+                    box-shadow: 5px 5px 15px gray;
+                    overflow: hidden;
+
+                    img {
+                        max-width: 100%;
+                        object-fit: cover;
+                    }
+                }
+            }
+
+            .boxblog {
+                display: inline-flex;
+                background-color: $color-cajas;
+                margin: 50px 50px 10px 233px;
+                border-radius: 5px;
+                overflow: hidden;
+                align-items: center;
+                width: 561px;
+                justify-content: center;
+                padding: 16px;
+
+                img {
+                    width: 733px;
+                    align-content: center;
+                    padding: -105px 5px 5px 5px;
+                    margin: 54px -202px 31px -165px;
+                    object-fit: contain;
+                }
+            }
+
+            .textoDelmain p {
+                display: flex;
+                width: 500px;
+                text-align: justify;
+            }
+
+            .imagenDelmain {
+                display: flex;
+                justify-content: left;
+                width: 0px;
+                height: 552px;
+                margin: -579px 1090px 204px 554px;
+
+
+            }
+          
+
+            .imagenDelmain2,
+            .imagenDelmain3,
+            .imagenDelmain4 {
+                display: none;
+            }
+            
+            .imagenDelmain2 {
+                display: flex;
+                justify-content: left;
+                width: 0px;
+                height: 557px;
+                margin: -759px 938px 31px 896px
+
+
+            }
+            .boxNewslatter {
+                display: flex;
+                background-color: gainsboro;
+                margin: 40px 134px 10px 260px;
+                border-radius: 5px;
+                overflow: hidden;
+                align-content: center;
+                width: 500px;
+                height: 500px;
+                flex-direction: column;
+                flex-wrap: wrap;
+
+                h2 {
+                    text-align: center;
+                    margin: -51px -527px 340px -237px;
+                }
+            }
+
+            .encabezadosDeseccion h1,
+            .tituloDelapagina h1,
+            .tituloDelapagina h2,
+            .encabezadosDeseccion h2 {
+                display: flex;
+                justify-content: center;
+                margin-top: 150px;
+                margin-bottom: 20px;
+            }
+            .encabezadosDeseccion h1{
+                margin-top: 24px;
+            }
+
+            .box img {
+                display: flex;
+                align-items: center;
+                margin: 28px 114px;
+            }
+        }
+    }
+
+    .tituloDelapagina {
+        padding: 30px;
+    }
+
+    .nav {
+        flex-direction: column;
+        background-color: #07371c;
+    }
+
+    .ultimoGpdisputado #img {
+        width: 100%;
+        height: 100%;
+        
+    }
+
+    footer {
+
+        .listaPie1 ul,
+        .listaPie2 ul {
+
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 10px 10px 10px 10px;
+
+            h2 {
+                display: flex;
+                flex-direction: column;
+            }
+        }
+
+        .direccion2 {
+            display: flex;
+            margin: -157px 0px 0px 0px;
+        }
+    }
+}
 
 @media screen and (max-width: 1024px) {
 
