--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,12 @@ main .carouselExampleCaptions {
   color: #b5be35;
 }
 
+main .ultimoGpdisputado {
+  margin-top: 2px;
+}
 main .ultimoGpdisputado .portadaDelhome img {
   width: 100%;
+  margin-top: 2px;
 }
 main .textoDelmain p {
   display: flex;
@@ -45,6 +49,7 @@ main .encabezadosDeseccion h1 {
   justify-content: center;
   margin-top: 50px;
   margin-bottom: 90px;
+  font-size: 400%;
 }
 main .imagenDelmain {
   display: flex;
@@ -343,6 +348,9 @@ footer {
   }
   body main .encabezadosDeseccion h1 {
     margin-top: 24px;
+  }
+  body main .encabezadosDeseccion h2 {
+    margin-top: 26px;
   }
   body main .box img {
     display: flex;
@@ -792,7 +800,7 @@ footer ul li {
   display: inline-block;
 }
 footer ul li img {
-  width: 50px;
+  width: 30px;
   object-fit: contain;
 }
 footer ul li .encabezadosDeseccion {
