--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -144,7 +144,9 @@ footer {
             .encabezadosDeseccion h1{
                 margin-top: 24px;
             }
-
+            .encabezadosDeseccion h2{
+                margin-top: 26px;
+            }
             .box img {
                 display: flex;
                 align-items: center;
