--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -7,10 +7,14 @@
 
 
 main {
+   
     .ultimoGpdisputado {
+        margin-top: 2px;
         .portadaDelhome {
             img {
                 width: 100%;
+                margin-top: 2px;
+                
             }
         }
 
@@ -46,6 +50,7 @@ main {
             justify-content: center;
             margin-top: 50px;
             margin-bottom: 90px;
+            font-size: 400%;
         }
     }
 
